# Testing

sauvc_mission/: CMakeLists.txt  package.xml
sauvc_mission/src/: mission_node.cpp
sauvc_msgs/: CMakeLists.txt  package.xml
sauvc_msgs/msg/: ObjArray.msg  ObjDetection.msg
sauvc_sim/: CMakeLists.txt
sauvc_sim/description/: camera.xacro  inertial.xacro  robot.xacro
sauvc_sim/launch/: sim.launch.py
sauvc_sim/worlds/: underwater.world
sauvc_vision/: CMakeLists.txt  package.xml
sauvc_vision/include/sauvc_vision/: yolo_engine.hpp
sauvc_vision/src/: yolo_engine.cpp  yolo_node.cpp
submarine_sim/: package.xml
submarine_sim/src/: rov_controller.cpp
submarine_sim/worlds/: underwater.world
